codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__user_history_cell_numbers_multiple_remote_images.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────
  [Image #1]
  [Image #2]

› describe both
────────────────────────────────────────────────────────────────────────────────
